recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:7: error: not enough arguments for method tree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameter shrink.
    tree(length*shrink,angle,shrink)
        ^Tree:9: error: not enough arguments for method tree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameter shrink.
    tree(lenght*shrink,angle,shrink)
        ^