recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
	if (steps==0){
    return}
  else {
    forward(length)
    right(angle)
    tree(length*shrink,angle,shrink)
    left(angle*2)
  	tree(lenght*shrink,angle,shrink)
    right(angle)
    backward(length)
    
  }	

}